<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context="com.em.guesstheflag.ui.GameFragment">

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/volumeButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:padding="24dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/volume"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/volume" />

        <LinearLayout
            android:visibility="visible"
            android:id="@+id/linearLayoutTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/guess_the_flag_title"
                android:contentDescription="@string/secondary_logo" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="208dp"
                android:layout_height="113dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/ic_launcher_background"
                android:contentDescription="@string/flag_image" />

            <TextView
                android:id="@+id/scoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/agency_fb_normal"
                android:text="@string/_0"
                android:textColor="@color/title_gray"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />
        </LinearLayout>

        <LinearLayout
            android:visibility="visible"
            android:id="@+id/linearLayoutCenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutTop">

            <Button
                android:id="@+id/buttonOption1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_radius"
                android:text="@string/option_1"
                android:fontFamily="@font/agency_fb_bold"
                android:textColor="@color/button_dark_gray"
                android:textSize="22sp"
                app:backgroundTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonOption2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_radius"
                android:fontFamily="@font/agency_fb_bold"
                android:text="@string/option_2"
                android:textColor="@color/button_dark_gray"
                android:textSize="22sp"
                app:backgroundTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonOption3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_radius"
                android:fontFamily="@font/agency_fb_bold"
                android:text="@string/option_3"
                android:textColor="@color/button_dark_gray"
                android:textSize="22sp"
                app:backgroundTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonOption4"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_radius"
                android:fontFamily="@font/agency_fb_bold"
                android:text="@string/option_4"
                android:textColor="@color/button_dark_gray"
                android:textSize="22sp"
                app:backgroundTint="@null" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/giveUpButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/squared_danger_button"
                android:fontFamily="@font/agency_fb_bold"
                android:text="@string/give_up"
                android:textColor="@color/white"
                android:textSize="26sp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/giveUpConfirmation"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_gray_95"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:fontFamily="@font/agency_fb_normal"
                android:text="@string/are_you_sure_you_want_to_give_up"
                android:textAlignment="center"
                android:paddingHorizontal="60dp" />

            <Button
                android:id="@+id/yesButton"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                app:backgroundTint="@null"
                android:background="@drawable/success_button"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:padding="0dp"
                android:fontFamily="@font/agency_fb_normal"
                android:text="Yes" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                app:backgroundTint="@null"
                android:background="@drawable/danger_button"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:padding="0dp"
                android:fontFamily="@font/agency_fb_normal"
                android:text="No" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gameOverPanel"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_gray_95"
            android:gravity="center_horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="42sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:textColor="@color/light_red"
                android:fontFamily="@font/agency_fb_normal"
                android:text="@string/game_over"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:fontFamily="@font/agency_fb_normal"
                android:text="@string/correct_answer"/>

            <TextView
                android:id="@+id/correctAnswerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:fontFamily="@font/agency_fb_normal"
                android:text="@string/answer"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:fontFamily="@font/agency_fb_normal"
                android:text="@string/your_score"/>

            <TextView
                android:id="@+id/finalScoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="@font/agency_fb_normal"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/newMaxScoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone"
                android:textColor="@color/gold"
                android:fontFamily="@font/agency_fb_normal"
                android:text="@string/new_high_score" />

            <Button
                android:id="@+id/replayButton"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                app:backgroundTint="@null"
                android:background="@drawable/success_button"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:padding="0dp"
                android:fontFamily="@font/agency_fb_normal"
                android:text="@string/replay" />

            <Button
                android:id="@+id/mainMenuButton"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                app:backgroundTint="@null"
                android:background="@drawable/danger_button"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:padding="0dp"
                android:fontFamily="@font/agency_fb_normal"
                android:text="@string/main_menu" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>