<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/network_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_gray"
        android:background="@drawable/button_radius"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center"
        tools:context="com.em.guesstheflag.ui.NetworkConnectionFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:text="@string/no_internet_connection"
            android:textColor="@color/light_red"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/please_reconnect_and_try_again"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/retryButton"
            android:layout_width="150dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:background="@drawable/success_button"
            android:text="@string/retry"
            android:textColor="@color/white"
            app:backgroundTint="@null" />
    </LinearLayout>
</layout>
