<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context="com.em.guesstheflag.ui.MenuFragment">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="383dp"
            android:layout_height="230dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/flag_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/main_logo" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/agency_fb_normal"
                android:text="@string/best_score"
                android:textColor="@color/title_gray"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bestScoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/agency_fb_normal"
                android:text="@string/_0"
                android:textColor="@color/title_gray"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/playGameButton"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:scaleType="fitCenter"
                android:padding="30dp"
                android:contentDescription="@string/play"
                android:src="@drawable/play_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity=""
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <ImageButton
                android:id="@+id/volumeButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@null"
                android:scaleType="fitCenter"
                android:padding="20dp"
                android:src="@drawable/volume"
                android:contentDescription="@string/volume" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/exitButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/exit"
                android:padding="20dp"
                android:contentDescription="@string/exit" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>